--- a/css/main.css
+++ b/css/main.css
@@ -11,14 +11,58 @@ div.photo-bg{
 	background-image: url("../img/photo-background.jpg");
 	background-position: center center;
 	background-size: cover;
+	
+	text-align: center;
+	position: relative;
+
+	height: 300px;
 }
 
-div#iPhoneContainer{
-	height: 300px;
+div#phoneContainer{
+
+	position: absolute;
+	bottom: 0;
+
+	background-image: url("../img/iphone-container.svg");
+	background-size: cover;
+
+	width: 175px;
+	height: 264px;
+	overflow: hidden;
+
+	left: 50%;
+	margin-left: -87px;
+
+	padding-top: 44px;
+}
+
+div#phoneContent{
+	left: 50%;
+    position: absolute;
+
+    width: 153px;
+	height: 273px;
+    margin-left: -77px;
+}
+
+div#phoneContent img{
+	width: 100%;
+	height: 100%;
+}
+
+div.phone-shade{
+	background: linear-gradient(rgba(74,74,74,0), rgba(74,74,74,0.5)); /* Standard syntax */
+
+	position: absolute;
+	bottom: 0;
+
+	height: 50px;
+	width: 100%;
 }
 
 div.header-bg{
 	background-color: #3CA0CB;
+	padding-bottom: 50px;
 }
 
 header{
@@ -33,8 +77,47 @@ img#app-icon{
 	height: 60px;
 }
 
+header a,
+header a:visited{
+	color: white;
+
+	border: 1px solid white;
+	border-radius: 3px;
+
+	padding: 0.75em 1.5em;
+	margin-bottom: 1em;
+}
+
+header a:hover{
+	color: #3CA0CB;
+	background-color: white;
+	text-decoration: none;
+}
+
 content#features{
-	color: red;
+	color: #3CA0CB;
+}
+
+content#features div{
+	text-align: center;
+}
+
+content#features p{
+	color: #4A4A4A;
+}
+
+content#features article{
+	margin-top: 1em;
+	margin-bottom: 1em;
+}
+
+content#features article img{
+	text-align: center;
+	display: block;
+	margin: 0 auto;
+
+	width: 45px;
+	height: 45px;
 }
 
 div.footer-bg{
@@ -44,24 +127,45 @@ div.footer-bg{
 footer{
 	color:white;
 	text-align: center;
+	padding-top: 20px;
+}
+
+footer h2{
+	margin-bottom: 0.8em;
 }
 
 
+h1{font-size: 1em; margin: 1em 0 0.8em 0;}
+h2{font-size: 1.5em; margin: 1.25em 0 1.75em 0;}
+h3{font-size: 1.3em;}
+p{font-size: 0.9em; line-height: 1.8em; margin-top: 1em;}
 
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
 
-/* Small devices (tablets, 768px and up) */
+/* --------------------------  Small devices (tablets, 768px and up)  -------------------------- */
 @media (min-width: 768px) { 
-
-	div#iPhoneContainer{
+	
+	div.photo-bg{
 		height: 400px;
 	}
 
-	header{
-		color: white;
-		text-align: center;
+	div#phoneContainer{
 
+		width: 200px;
+		height: 320px;
+		margin-left: -100px;
+
+		padding-top: 50px;
+	}
+
+	div#phoneContent{
+		width: 175px;
+		height: 313px;
+		margin-left: -87px;
+	}
+
+	header{
 		margin-top: -37px;
 	}
 
@@ -70,19 +174,60 @@ footer{
 		height: 75px;
 	}
 
+	div.phone-shade{
+		height: 60px;
+	}
+
+	content#features article{
+		margin-top: 1.5em;
+		margin-bottom: 1.5em;
+	}
+
+	content#features .row{
+		margin-left: 30px;
+		margin-right: 30px;
+	}
+
+	footer{
+		padding-top: 30px;
+	}
+
+	footer h2{
+		margin-bottom: 0.75em;
+	}
+
+
+
+	h1{font-size: 1.1em;}
+	h2{font-size: 2em; margin: 0.85em 0 1.4em 0;}
+	h3{font-size: 1.45em;}
+	p{font-size: 1em;}
+
 }
 
-/* Medium devices (desktops, 992px and up) */
+/* -------------------------- Medium devices (desktops, 992px and up) -------------------------- */
 @media (min-width: 992px) {
-
-	div#iPhoneContainer{
-		height: 450px;
-	}
 	
-	header{
-		color: white;
-		text-align: center;
+	div.photo-bg{
+		height: 420px;
+	}
 
+	div#phoneContainer{
+
+		width: 220px;
+		height: 360px;
+		margin-left: -110px;
+
+		padding-top: 56px;
+	}
+
+	div#phoneContent{
+		width: 192px;
+		height: 344px;
+		margin-left: -96px;
+	}
+
+	header{
 		margin-top: -45px;
 	}
 
@@ -91,14 +236,89 @@ footer{
 		height: 90px;
 	}
 
+	div.phone-shade{
+		height: 70px;
+	}
+
+	content#features article{
+		margin-top: 3em;
+		margin-bottom: 3em;
+	}
+
+	content#features div{
+		text-align: left;
+	}
+
+	footer{
+		padding-top: 40px;
+	}
+
+	footer h2{
+		font-size: 2em;
+		margin-bottom: 0.5em;
+	}
+	
+	h1{font-size: 1.2em;}
+	h2{font-size: 2.25em; margin: 0.7em 0 1.2em 0;}
+	h3{font-size: 1.6em; margin-top: 1em;}
+	p{font-size: 1.1em; line-height: 1.65em; margin-top: 1em;}
+
 }
 
-/* Large devices (large desktops, 1200px and up) */
+/* -------------------------- Large devices (large desktops, 1200px and up) -------------------------- */
 @media (min-width: 1200px) {
-
-	div#iPhoneContainer{
-		height: 500px;
+	
+	div.photo-bg{
+		height: 440px;
 	}
+
+	div#phoneContainer{
+
+		width: 250px;
+		height: 410px;
+		margin-left: -125px;
+
+		padding-top: 63px;
+	}
+
+	div#phoneContent{
+		width: 218px;
+		height: 392px;
+		margin-left: -109px;
+	}
+
+
+	header{
+		margin-top: -50px;
+	}
+
+	img#app-icon{
+		width: 100px;
+		height: 100px;
+	}
+
+	div.phone-shade{
+		height: 90px;
+	}
+
+	content#features article{
+		margin-top: 4em;
+		margin-bottom: 4em;
+	}
+
+	footer{
+		padding-top: 50px;
+	}
+
+	footer h2{
+		font-size: 2.2em;
+		margin-bottom: 0.4em;
+	}
+	
+	h1{font-size: 1.5em;}
+	h2{font-size: 2.8em; margin: 0.5em 0 1em 0;}
+	h3{font-size: 1.8em;}
+	p{font-size: 1.3em;}
 
 }
 
