--- a/css/main.css
+++ b/css/main.css
@@ -2,20 +2,32 @@
 
 body, html{
 	color: black;
-	height: 100%;
-
 	font-family: 'Montserrat', sans-serif;
+	font-size: 14px;
 }
 
-div.photo-bg{
+a{
+	text-decoration: none;
+}
+
+header{
+	color: white;
+	text-align: center;
+
+	background-color: #3CA0CB;
+
+	/*margin-top: -30px;*/
+}
+
+div#photoBackground{
 	background-image: url("../img/photo-background.jpg");
 	background-position: center center;
 	background-size: cover;
 	
-	text-align: center;
 	position: relative;
 
 	height: 300px;
+	width: 100%;
 }
 
 div#phoneContainer{
@@ -25,14 +37,14 @@ div#phoneContainer{
 
 	background-image: url("../img/iphone-container.svg");
 	background-size: cover;
+	overflow: hidden;
 
 	width: 175px;
 	height: 264px;
-	overflow: hidden;
+	box-sizing:border-box;
 
 	left: 50%;
 	margin-left: -87px;
-
 	padding-top: 44px;
 }
 
@@ -50,8 +62,8 @@ div#phoneContent img{
 	height: 100%;
 }
 
-div.phone-shade{
-	background: linear-gradient(rgba(74,74,74,0), rgba(74,74,74,0.5)); /* Standard syntax */
+div.phoneShade{
+	background: linear-gradient(rgba(74,74,74,0), rgba(74,74,74,0.5)); 
 
 	position: absolute;
 	bottom: 0;
@@ -61,20 +73,19 @@ div.phone-shade{
 }
 
 div.header-bg{
-	background-color: #3CA0CB;
+	/* background-color: #3CA0CB; */
 	padding-bottom: 50px;
 }
 
-header{
-	color: white;
-	text-align: center;
-
-	margin-top: -30px;
+div#headerContent{
+	margin: 0 30px;
+	position: relative;
 }
 
-img#app-icon{
+img#appIcon{
 	width: 60px;
 	height: 60px;
+	margin-top: -30px;
 }
 
 header p{
@@ -227,7 +238,7 @@ p{font-size: 0.9em; line-height: 1.8em; margin: 1em 0em;}
 /* --------------------------  Small devices (tablets, 768px and up)  -------------------------- */
 @media (min-width: 768px) { 
 	
-	div.photo-bg{
+	div#photoBackground{
 		height: 400px;
 	}
 
@@ -291,7 +302,7 @@ p{font-size: 0.9em; line-height: 1.8em; margin: 1em 0em;}
 /* -------------------------- Medium devices (desktops, 992px and up) -------------------------- */
 @media (min-width: 992px) {
 	
-	div.photo-bg{
+	div#photoBackground{
 		height: 420px;
 	}
 
@@ -351,7 +362,7 @@ p{font-size: 0.9em; line-height: 1.8em; margin: 1em 0em;}
 /* -------------------------- Large devices (large desktops, 1200px and up) -------------------------- */
 @media (min-width: 1200px) {
 	
-	div.photo-bg{
+	div#photoBackground{
 		height: 440px;
 	}
 
