--- a/css/main.css
+++ b/css/main.css
@@ -15,8 +15,7 @@ header{
 	text-align: center;
 
 	background-color: #3CA0CB;
-
-	/*margin-top: -30px;*/
+	padding-bottom: 3em;
 }
 
 div#photoBackground{
@@ -78,7 +77,7 @@ div.header-bg{
 }
 
 div#headerContent{
-	margin: 0 30px;
+	margin: 0 2em;
 	position: relative;
 }
 
@@ -110,42 +109,44 @@ header a:hover{
 	text-decoration: none;
 }
 
+section#features {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	padding: 3em 2em;
+}
 
-
-content#features{
+section#features article {
+	width: 100%;
+	text-align: center;
+	margin: 1em 2em;
 	color: #3CA0CB;
 }
 
-content#features div{
-	text-align: center;
-}
-
-content#features p{
+section#features p{
 	color: #4A4A4A;
 }
 
-content#features article{
-	margin-top: 1em;
-	margin-bottom: 1em;
-}
-
-content#features article img{
+section#features article img{
 	text-align: center;
 	display: block;
-	margin: 0 auto;
+	margin: 0 auto 1.5em;
 
 	width: 45px;
 	height: 45px;
 }
 
-div.footer-bg{
-	background-color: #3CA0CB;
-}
 
 footer{
+	background-color: #3CA0CB;
 	color:white;
+
 	text-align: center;
 	padding-top: 20px;
+}
+
+footer section{
+	margin: 0 2em;
 }
 
 footer h2{
@@ -155,11 +156,12 @@ footer h2{
 
 #mc_embed_signup{
 	clear:left; 
-	font:14px 'Montserrat', sans-serif;
+	margin-top: 1.5em;
 }
 
 #mc_embed_signup input{
 	display: inline-block;
+	box-sizing:border-box;
 }
 
 #mc_embed_signup input::-webkit-input-placeholder{
@@ -172,7 +174,10 @@ footer h2{
 	color:rgba(255, 255, 255, 0.5);
 }
 
-#mc_embed_signup input.subscribeemail{
+#mc_embed_signup input.subscribeemail,
+#mc_embed_signup input.subscribebutton{
+	font:14px 'Montserrat', sans-serif;
+
 	display: inline-block;
 	clear: none;
 
@@ -184,22 +189,15 @@ footer h2{
 
 	padding: 0.75em 1em;
 	margin-bottom: 1em;
-	width: 62%
+	
 }
 
+#mc_embed_signup input.subscribeemail{
+	width: 62%;
+}
 
 #mc_embed_signup input.subscribebutton{
-	display: inline-block;
-	clear: none;
-
-	color: #FFFFFF;
-	background-color: #3CA0CB;
-
-	border: 1px solid white;
-	border-radius: 3px;
-
 	padding: 0.75em 0em;
-	margin-bottom: 1em;
 	width: 35%;
 }
 
@@ -236,14 +234,13 @@ p{font-size: 0.9em; line-height: 1.8em; margin: 1em 0em;}
 /* No media query since this is the default in Bootstrap */
 
 /* --------------------------  Small devices (tablets, 768px and up)  -------------------------- */
-@media (min-width: 768px) { 
+@media (min-width: 750px) { 
 	
 	div#photoBackground{
 		height: 400px;
 	}
 
 	div#phoneContainer{
-
 		width: 200px;
 		height: 320px;
 		margin-left: -100px;
@@ -257,31 +254,42 @@ p{font-size: 0.9em; line-height: 1.8em; margin: 1em 0em;}
 		margin-left: -87px;
 	}
 
-	header{
-		margin-top: -37px;
+	header #headerContent{
+		width: 75%;
+		margin-left: auto;
+		margin-right: auto;
 	}
 
-	img#app-icon{
+	img#appIcon{
 		width: 75px;
 		height: 75px;
+		margin-top: -37px;
 	}
 
 	div.phone-shade{
 		height: 60px;
 	}
 
-	content#features article{
+	section#features article{
 		margin-top: 1.5em;
 		margin-bottom: 1.5em;
+
+		flex: 1 0 40%;
 	}
 
-	content#features .row{
+	section#features .row{
 		margin-left: 30px;
 		margin-right: 30px;
 	}
 
 	footer{
 		padding-top: 30px;
+	}
+
+	footer section{
+		width: 44%;
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 	footer h2{
@@ -303,7 +311,7 @@ p{font-size: 0.9em; line-height: 1.8em; margin: 1em 0em;}
 @media (min-width: 992px) {
 	
 	div#photoBackground{
-		height: 420px;
+		height: 450px;
 	}
 
 	div#phoneContainer{
@@ -321,25 +329,31 @@ p{font-size: 0.9em; line-height: 1.8em; margin: 1em 0em;}
 		margin-left: -96px;
 	}
 
-	header{
-		margin-top: -45px;
+	header #headerContent{
+		width: 66.6666%;
 	}
 
-	img#app-icon{
+	img#appIcon{
 		width: 90px;
 		height: 90px;
+		margin-top: -45px;
 	}
 
 	div.phone-shade{
 		height: 70px;
 	}
 
-	content#features article{
-		margin-top: 3em;
-		margin-bottom: 3em;
+	section#features{
+		padding: 2em 2em;
 	}
 
-	content#features div{
+	section#features article{
+		margin: 3em 1em;
+
+		flex: 1 0 15%;
+	}
+
+	section#features div{
 		text-align: left;
 	}
 
@@ -363,7 +377,7 @@ p{font-size: 0.9em; line-height: 1.8em; margin: 1em 0em;}
 @media (min-width: 1200px) {
 	
 	div#photoBackground{
-		height: 440px;
+		height: 480px;
 	}
 
 	div#phoneContainer{
@@ -386,16 +400,21 @@ p{font-size: 0.9em; line-height: 1.8em; margin: 1em 0em;}
 		margin-top: -50px;
 	}
 
-	img#app-icon{
+	header #headerContent{
+		width: 44%;
+	}
+
+	img#appIcon{
 		width: 100px;
 		height: 100px;
+		margin-top: -50px;
 	}
 
 	div.phone-shade{
 		height: 90px;
 	}
 
-	content#features article{
+	section#features article{
 		margin-top: 4em;
 		margin-bottom: 4em;
 	}
